fix /cover on firefox

--- a/public_html/html/corporate/css/style.less
+++ b/public_html/html/corporate/css/style.less
@@ -608,8 +608,8 @@ h1 {
     }
 }
 .header-partners {
-    background: #F2F2F2 url('../img/home-partners-bg.png') no-repeat no-repeat scroll 100% 50% / cover;;
-    //background-size: cover;
+    background: #F2F2F2 url('../img/home-partners-bg.png') no-repeat no-repeat scroll 100% 50%;
+    background-size: cover;
     .first-group {
         margin-bottom: 20px;
     }
@@ -654,16 +654,17 @@ h1 {
     }
     
     .about-bg{
-        background: url('../img/home-about-bg2.png') no-repeat scroll 50% 50% / cover;
+        background: url('../img/home-about-bg2.png') no-repeat scroll 50% 50%;
         background-color: #fff;
+        background-size: cover;
     }
 }
 .home-news-bg{
-    background: #F2F2F2 url('../img/home-news-bg.png') no-repeat scroll 50% 50% / cover;
+    background: #F2F2F2 url('../img/home-news-bg.png') no-repeat scroll 50% 50%;
     background-size: cover;
 }
 .home-blog-bg{
-    background: url('../img/home-blog-bg.png') no-repeat scroll 50% 50% / cover;
+    background: url('../img/home-blog-bg.png') no-repeat scroll 50% 50%;
     background-size: cover;
 }
 .header-news{
